refractions?